Added: Constraint layout for DailyForecasts

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,8 @@
     <string name="main_nav_forecast">Прогноз</string>
     <string name="main_nav_daily_forecast">Прогноз на неделю</string>
     <string name="menu_nav_weather">Погода</string>
+    <string name="forecast_temp_day">День</string>
+    <string name="forecast_temp_evening">Вечер</string>
+    <string name="forecast_temp_morning">Утро</string>
+    <string name="forecast_temp_night">Ночь</string>
 </resources>
