--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,4 +43,7 @@
     <string name="forecast_text_morning">Утро</string>
     <string name="forecast_text_night">Ночь</string>
     <string name="weather_updated">"Обновлено: %1$s"</string>
+    <string name="city_removed">Город был удален</string>
+    <string name="danger_error">Произошла ошибка</string>
+    <string name="fetching_error">Произошла ошибка соединения</string>
 </resources>
